<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_txtName" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/lblLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_txtLastName" />


    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_lblCheckBox"/>

    <Button
        android:id="@+id/btnHail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_txtHail"/>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_textBtnReset"/>

    <TextView
        android:id="@+id/hail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</LinearLayout>